# factory_bot

./: pyproject.toml
core/: settings.py
core/settings/: base.py  production.py
