[tool.poetry]
name = "factory-bot"
version = "0.1.0"
description = ""
authors = ["Zhaks <amiradinzh@appetite.menu>"]
readme = "README.md"
packages = [{include = "factory_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.5"
djangorestframework = "^3.14.0"
python-decouple = "^3.7"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
